--- a/src/app/components/landing-page/landing-page.component.css
+++ b/src/app/components/landing-page/landing-page.component.css
@@ -51,6 +51,20 @@
     margin: 20px;
     padding: 20px;
 }
+input[type="date"] {
+    border: 1px solid #ccc; /* Đường viền */
+    border-radius: 4px; /* Bo góc */
+    padding: 8px; /* Khoảng cách bên trong */
+    font-size: 16px; /* Kích thước chữ */
+    margin-right: 10px; /* Khoảng cách bên phải */
+    width: 150px; /* Chiều rộng */
+}
+  
+input[type="date"]:focus {
+    border-color: #007bff; /* Màu đường viền khi focus */
+    outline: none; /* Bỏ viền mặc định khi focus */
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); /* Hiệu ứng đổ bóng khi focus */
+}
 .chart-placeholder {
     height: 300px;
     background-color: var(--bg-light);
