--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,4 +1,21 @@
-<div class="container">
+<header class="header">
+  <h1>
+    <span class="stock">Stock </span>
+    <span class="analysis">Analysis</span>
+  </h1>
+  <nav>
+    <button class="current" (click)="toLandingPage()">Home</button>
+    <button class="nav" (click)="toTest()">Strategy Tester</button>
+    <button class="nav" (click)="toBackTest()">Back Test</button>
+  </nav>
+  <input
+    type="text"
+    placeholder="Search stocks..."
+    id="searchInput"
+    (input)="searchStocks($event)"
+  />
+</header>
+<main class="main-content">
   <aside class="sidebar">
     <h2>Watchlist</h2>
     <ul id="watchlist">
@@ -11,52 +28,40 @@
       </li>
     </ul>
     <button class="button" (click)="addStock()">Add Stock</button>
-    <button class="button" (click)="goToTest()">Test</button>
-    <div class="user-info">
-      <button class="button" (click)="logout()">Logout</button>
-      <span>{{ username }}</span>
-    </div>
+    <button class="button" id="logout" (click)="logout()">Log out</button>
   </aside>
-  <main class="main-content">
-    <header class="header">
-      <h1>Stock Analysis</h1>
-      <input
-        type="text"
-        placeholder="Search stocks..."
-        id="searchInput"
-        (input)="searchStocks($event)"
-      />
-    </header>
-    <div class="chart-container">
-      <h2>{{ selectedStock.symbol }}</h2>
-      <div class="chart-placeholder">Stock chart placeholder</div>
-      <div>
-        <!--<select id="timeframe" [(ngModel)]="selectedTimeframe">
+
+  <div class="chart-container">
+    <h2>{{ selectedStock.symbol }}</h2>
+    <div class="chart-placeholder">Stock chart placeholder</div>
+    <div>
+      <!--<select id="timeframe" [(ngModel)]="selectedTimeframe">
           <option value="1d">1 Day</option>
           <option value="1w">1 Week</option>
           <option value="1m">1 Month</option>
           <option value="1y">1 Year</option>
         </select>-->
-        <label for="startDate">Start Date:</label>
-        <input
-          type="date"
-          id="startDate"
-          [(ngModel)]="startDate"
-          (change)="updateChart()"
-        />
-
-        <label for="endDate">End Date:</label>
-        <input
-          type="date"
-          id="endDate"
-          [(ngModel)]="endDate"
-          (change)="updateChart()"
-        />
-        <button class="button" (click)="toggleIndicator('SMA')">SMA</button>
-        <button class="button" (click)="toggleIndicator('EMA')">EMA</button>
-        <button class="button" (click)="toggleIndicator('MACD')">MACD</button>
-      </div>
+      <label for="startDate">Start Date:</label>
+      <input
+        type="date"
+        id="startDate"
+        [(ngModel)]="startDate"
+        (change)="updateChart()"
+      />
+      <label for="endDate">End Date:</label>
+      <input
+        type="date"
+        id="endDate"
+        [(ngModel)]="endDate"
+        (change)="updateChart()"
+      />
+      <button class="button" (click)="toggleIndicator('SMA')">SMA</button>
+      <button class="button" (click)="toggleIndicator('EMA')">EMA</button>
+      <button class="button" (click)="toggleIndicator('MACD')">MACD</button>
     </div>
+  </div>
+
+  <article>
     <div class="card">
       <h2>Stock Information</h2>
       <dl id="stockInfo">
@@ -109,5 +114,5 @@
         </ul>
       </div>
     </div>
-  </main>
-</div>
+  </article>
+</main>
