--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -29,7 +29,12 @@
     </header>
     <div class="chart-container">
       <h2>{{ selectedStock.symbol }}</h2>
-      <div class="chart-placeholder">Stock chart placeholder</div>
+      <div *ngIf="chartImage; else placeholder">
+        <img [src]="chartImage" alt="Stock chart" />
+      </div>
+      <ng-template #placeholder>
+        <div class="chart-placeholder">Stock chart placeholder</div>
+      </ng-template>
       <div>
         <!--<select id="timeframe" [(ngModel)]="selectedTimeframe">
           <option value="1d">1 Day</option>
