--- a/FE/src/app/components/define-strategy/define-strategy.component.html
+++ b/FE/src/app/components/define-strategy/define-strategy.component.html
@@ -27,7 +27,7 @@
         <input
           type="number"
           [(ngModel)]="exitConditions.sizePercent"
-          placeholder="Enter period"
+          placeholder="Enter size %"
         />
       </label>
       <label>
@@ -35,7 +35,7 @@
         <input
           type="number"
           [(ngModel)]="exitConditions.stopLoss"
-          placeholder="Enter period"
+          placeholder="Enter stop loss"
         />
       </label>
       <label>
@@ -43,7 +43,7 @@
         <input
           type="number"
           [(ngModel)]="exitConditions.takeProfit"
-          placeholder="Enter period"
+          placeholder="Enter profit"
         />
       </label>
       <label>
@@ -98,7 +98,7 @@
         <input
           type="number"
           [(ngModel)]="exitConditions.sizePercent"
-          placeholder="Enter period"
+          placeholder="Enter size %"
         />
       </label>
       <label>
@@ -106,7 +106,7 @@
         <input
           type="number"
           [(ngModel)]="exitConditions.stopLoss"
-          placeholder="Enter period"
+          placeholder="Enter stop loss"
         />
       </label>
       <label>
@@ -114,7 +114,7 @@
         <input
           type="number"
           [(ngModel)]="exitConditions.takeProfit"
-          placeholder="Enter period"
+          placeholder="Enter profit"
         />
       </label>
       <label>
