--- a/FE/src/app/components/test-ui/test-ui.component.html
+++ b/FE/src/app/components/test-ui/test-ui.component.html
@@ -28,7 +28,7 @@
           <input
             type="number"
             [(ngModel)]="exitConditions.sizePercent"
-            placeholder="Enter period"
+            placeholder="Enter size %"
           />
         </label>
         <label>
@@ -36,7 +36,7 @@
           <input
             type="number"
             [(ngModel)]="exitConditions.stopLoss"
-            placeholder="Enter period"
+            placeholder="Enter stop loss"
           />
         </label>
         <label>
@@ -44,7 +44,7 @@
           <input
             type="number"
             [(ngModel)]="exitConditions.takeProfit"
-            placeholder="Enter period"
+            placeholder="Enter profit"
           />
         </label>
         <label>
@@ -92,7 +92,7 @@
           <input
             type="number"
             [(ngModel)]="exitConditions.sizePercent"
-            placeholder="Enter period"
+            placeholder="Enter size %"
           />
         </label>
         <label>
@@ -100,7 +100,7 @@
           <input
             type="number"
             [(ngModel)]="exitConditions.stopLoss"
-            placeholder="Enter period"
+            placeholder="Enter stop loss"
           />
         </label>
         <label>
@@ -108,7 +108,7 @@
           <input
             type="number"
             [(ngModel)]="exitConditions.takeProfit"
-            placeholder="Enter period"
+            placeholder="Enter profit"
           />
         </label>
         <label>
