--- a/FE/src/app/components/test-ui/test-ui.component.css
+++ b/FE/src/app/components/test-ui/test-ui.component.css
@@ -116,6 +116,14 @@ nav .nav:hover {
     margin-bottom: 5px;
     font-size: 14px;
   }
+
+  input[type="text"] {
+    padding: 8px;
+    background-color: #2d2d2d;
+    border: 1px solid #4d4d4d;
+    border-radius: 4px;
+    color: #ffffff;
+  }
   
   select, input[type="number"] {
     width: 100%;
