--- a/FE/src/app/components/test-ui/test-ui.component.html
+++ b/FE/src/app/components/test-ui/test-ui.component.html
@@ -41,11 +41,7 @@
         </label>
         <label>
           <span>Take profit</span>
-          <input
-            type="number"
-            [(ngModel)]="exitConditions.takeProfit"
-            placeholder="Enter profit"
-          />
+          <input type="number" placeholder="Enter profit" />
         </label>
         <label>
           <span>Position</span>
@@ -74,19 +70,11 @@
         </label>
         <label>
           <span>{{ firstEntryLabel }}</span>
-          <input
-            type="text"
-            [(ngModel)]="exitConditions.takeProfit"
-            placeholder="Enter {{ firstEntryLabel }}"
-          />
+          <input type="text" placeholder="Enter {{ firstEntryLabel }}" />
         </label>
         <label>
           <span>{{ secondEntryLabel }}</span>
-          <input
-            type="text"
-            [(ngModel)]="exitConditions.takeProfit"
-            placeholder="Enter {{ secondEntryLabel }}"
-          />
+          <input type="text" placeholder="Enter {{ secondEntryLabel }}" />
         </label>
       </div>
     </div>
@@ -113,11 +101,7 @@
         </label>
         <label>
           <span>Take profit</span>
-          <input
-            type="number"
-            [(ngModel)]="exitConditions.takeProfit"
-            placeholder="Enter profit"
-          />
+          <input type="number" placeholder="Enter profit" />
         </label>
         <label>
           <span>Position</span>
@@ -142,19 +126,11 @@
         </label>
         <label>
           <span>{{ firstExitLabel }}</span>
-          <input
-            type="text"
-            [(ngModel)]="exitConditions.takeProfit"
-            placeholder="Enter {{ firstExitLabel }}"
-          />
+          <input type="text" placeholder="Enter {{ firstExitLabel }}" />
         </label>
         <label>
           <span>{{ secondExitLabel }}</span>
-          <input
-            type="text"
-            [(ngModel)]="exitConditions.takeProfit"
-            placeholder="Enter {{ secondExitLabel }}"
-          />
+          <input type="text" placeholder="Enter {{ secondExitLabel }}" />
         </label>
       </div>
     </div>
