--- a/FE/src/app/components/test-ui/test-ui.component.html
+++ b/FE/src/app/components/test-ui/test-ui.component.html
@@ -25,19 +25,11 @@
       <div class="period-inputs">
         <label>
           <span>Size percentage</span>
-          <input
-            type="number"
-            [(ngModel)]="exitConditions.sizePercent"
-            placeholder="Enter size %"
-          />
+          <input type="number" placeholder="Enter size %" />
         </label>
         <label>
           <span>Stop loss</span>
-          <input
-            type="number"
-            [(ngModel)]="exitConditions.stopLoss"
-            placeholder="Enter stop loss"
-          />
+          <input type="number" placeholder="Enter stop loss" />
         </label>
         <label>
           <span>Take profit</span>
@@ -45,7 +37,7 @@
         </label>
         <label>
           <span>Position</span>
-          <select [(ngModel)]="exitConditions.position">
+          <select>
             <option value="">Select position</option>
             <option value="golden">Long</option>
             <option value="death">Short</option>
@@ -85,19 +77,11 @@
       <div class="period-inputs">
         <label>
           <span>Size percentage</span>
-          <input
-            type="number"
-            [(ngModel)]="exitConditions.sizePercent"
-            placeholder="Enter size %"
-          />
+          <input type="number" placeholder="Enter size %" />
         </label>
         <label>
           <span>Stop loss</span>
-          <input
-            type="number"
-            [(ngModel)]="exitConditions.stopLoss"
-            placeholder="Enter stop loss"
-          />
+          <input type="number" placeholder="Enter stop loss" />
         </label>
         <label>
           <span>Take profit</span>
@@ -105,7 +89,7 @@
         </label>
         <label>
           <span>Position</span>
-          <select [(ngModel)]="exitConditions.position">
+          <select>
             <option value="">Select position</option>
             <option value="golden">Long</option>
             <option value="death">Short</option>
