--- a/FE/src/app/components/backtest/backtest.component.html
+++ b/FE/src/app/components/backtest/backtest.component.html
@@ -61,7 +61,7 @@
         </div>
 
         <div class="strategy-item">
-          <h4>Exit condition</h4>
+          <h4 class="tmp">Exit condition</h4>
           <p>Death Cross</p>
           <div class="period-settings">
             <div class="period">
